# noirblanc

./: Cargo.toml  README.md  bench.sh
.github/workflows/: rust-bench.yml  rust.yml
dev/bench/: data.js
noirblanc_ai/: Cargo.toml
noirblanc_core/: Cargo.toml
noirblanc_core/benches/: perft.rs
noirblanc_core/examples/: bit_board.rs  perft.rs
noirblanc_core/src/: bit_board.rs  bitboard.rs  color.rs  lib.rs  perft.rs  position.rs  square.rs
