[package]
name = "noirblanc"
version = "0.1.0"
authors = ["koba-e964 <3303362+koba-e964@users.noreply.github.com>"]
edition = "2018"
publish = false


[workspace]
members = [
    "noirblanc_core",
    "noirblanc_ai",
]

[dependencies]
noirblanc_core = { path = "./noirblanc_core" }
noirblanc_ai = { path = "./noirblanc_ai" }
